--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "concurrently": "^5.3.0",
+    "final-form": "^4.20.1",
     "http-proxy-middleware": "^1.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-final-form": "^6.5.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
-    "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
